[package]
name = "tower-sessions-file-based-store"
description = "File-based session store for `tower-sessions`."
authors = ["Max Katz <max.katz@gmail.com>"]
license = "MIT"
homepage = "https://github.com/maxk42/tower-sessions-file-store"
repository = "https://github.com/maxk42/tower-sessions-file-store"
keywords = ["axum", "sessions", "tower", "file", "tower-sessions"]
categories = ["asynchronous", "network-programming", "web-programming"]
version = "0.1.2"
edition = "2021"
readme = "README.md"


[dependencies]
axum = "0.7.9"
serde_json = "1.0.133"
tower-sessions = "0.14.0"
